--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,35 @@ a {
   }
 }
 
+:root {
+  --primary: #F1EAE0;
+  --secondary: black;
+}
+
 @tailwind base;
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
+
+
 @tailwind components;
 @tailwind utilities;
