--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ a {
 }
 
 :root {
-  --primary: #F1EAE0;
+  --primary: #f1eae0;
   --secondary: black;
 }
 
@@ -53,8 +53,6 @@ a {
   border-radius: 14px;
   border: 3px solid var(--primary);
 }
-
-
 
 @tailwind components;
 @tailwind utilities;
